[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["vvvadim <v.vladimirov@it-park.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
isodate = "^0.6.1"
google-api-python-client = "^2.100.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
